# macro-ai

./: .env.example  .gitignore  PROGRESS.md  README.md  docker-compose.dev.yml  docker-compose.yml  mongo-init.js
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py  redis.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  chat.py  checklist.py  food_log.py  foods.py  recipes.py  reminders.py  reports.py  router.py  templates.py  users.py  weight.py
backend/app/models/: chat_session.py  checklist.py  food.py  food_log.py  recipe.py  reminder.py  user.py  weight.py
backend/app/schemas/: user.py
backend/app/services/: auth_service.py  daily_insights.py  nutrient_alerts.py  tdee_service.py
backend/app/services/ai/: checkpointer.py  graph.py  llm.py  prompts.py  tools.py
backend/app/utils/: crypto.py
backend/seeds/: foods.json  seed_foods.py
docs/: ARCHITECTURE.md  PRD.md
e2e/: package-lock.json  package.json  playwright.config.ts
e2e/docs/: SELECTORS.md  TEST-RESULTS.md  TESTING-PLAN.md
e2e/tests/: 01-auth-onboarding.spec.ts  02-dashboard.spec.ts  03-food-logging.spec.ts  04-recipes.spec.ts  05-profile-templates.spec.ts  06-analytics-weight.spec.ts  07-checklist.spec.ts  08-settings.spec.ts  09-navigation-theme.spec.ts  10-ai-chat.spec.ts  11-responsive-crosscutting.spec.ts  12-edge-cases.spec.ts  global-setup.ts
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: error.tsx  layout.tsx  not-found.tsx  providers.tsx
frontend/components/: auth-guard.tsx  error-card.tsx  (+1 more)
nginx/: nginx.conf
(+48 files in other folders)
